# Rust-experience

./: .gitignore  README.md
basics/: Cargo.toml
basics/src/: full_text_search.rs  hangman.rs  main.rs  word_count.rs
bomberman/src/: main.rs
