[package]
name = "basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4.20"
[[bin]]
name = "hangman"
path = "src/hangman.rs"

[[bin]]
name = "word_count"
path = "src/word_count.rs"

[[bin]]
name = "full_text_search"
path = "src/full_text_search.rs"